@@ -1,0 +1,3 @@
+#!/bin/bash
+# This is sooo lame...
+./livelog.cgi -m
