@@ -6,7 +6,7 @@ html, body
 	height: 100%;
 	background-color: #33333F;
 	color: #CDCFD5;
-	font-family: verdana, arial, sans-serif;
+	font-family: arial, sans-serif;
 	font-size: 12px;
 	overflow: auto;
 }
