@@ -1,0 +1,22 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+<head>
+<title>Bluelog Live</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<link href="mobile.css" type="text/css" rel="stylesheet" />
+<link rel="icon" type="image/png" href="images/favicon.png" />
+<link rel="shortcut icon" href="images/favicon.png" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
+<meta HTTP-EQUIV="refresh" CONTENT="20">
+</head>
+<body>
+<div id="header">
+<span style="float:left;position:relative;top:-5px;">
+<img style="height:30%" src="images/bluelog_logo.png" border="0">
+</span>
+<span style="position:relative;left:5px;top:5px;">
+<a href="http://www.digifail.com/" target="_blank" title="DigiFAIL"><img style="height:20%;" src="images/digifail_logo.png" border="0"></a></span>
+</div>
+<!--All static content loaded first-->
+<object type="text/html" height="100%" width="100%" data="/cgi-bin/mobilehelper.cgi"/> 
